--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,23 +1,5 @@
-.thumbnail img {
-    width: 100%;
-}
-
-.thumbnail {
-    padding: 0;
-}
-
-.thumbnail .caption-full {
-    padding: 9px;
-}
-
-.delete-form {
-	display:inline;
-}
-
-
-/* sign in FORM */
 #logreg-forms{
-    width:500px;
+    width:412px;
     margin:10vh auto;
     background-color:#f3f3f3;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -77,7 +59,7 @@
 
 #logreg-forms .google-btn{ background-color: #DF4B3B; }
 
-/* #logreg-forms .form-reset, #logreg-forms .form-signup{ display: none; } */
+#logreg-forms .form-reset, #logreg-forms .form-signup{ display: none; }
 
 #logreg-forms .form-signup .social-btn{ width:210px; }
 
@@ -111,9 +93,9 @@
     #logreg-forms .social-btn:nth-child(1){
         margin-bottom: 5px;
     }
-    /* #logreg-forms .social-btn span{
+    #logreg-forms .social-btn span{
         display: none;
-    } */
+    }
     #logreg-forms  .facebook-btn:after{
         content:'Facebook';
     }
