--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,11 +1,10 @@
 <%- include("../partials/header") %>
 
-	<div class="container">
 
 		<header class="jumbotron">
 			<div class="container">
-				<h1> Welcome to YelpCamp! </h1>
-				<p> The Stairway to Heaven. </p>
+				<h1> Welcome to Go Glamping! </h1>
+				<p> The Stairway to Heaven </p>
 				<p> <a class="btn btn-primary btn-large"href="/campgrounds/new"> Add a New Campground </a> </p>
 			</div>
 		</header>
@@ -25,6 +24,5 @@
 				</div>
 			<% }); %>
 		</div>
-	</div>
 
 <%- include("../partials/footer") %>
