--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,13 +2,13 @@
 
 	<div id="logreg-forms">
 		<form action="/register" method="POST" class="form-signup">
-            <div class="social-login">
+            <!-- <div class="social-login">
                 <button class="btn btn-lg facebook-btn social-btn" type="button"><span><i class="fab fa-facebook-f"></i> Sign up with Facebook</span> </button>
             </div>
             <div class="social-login">
                 <button class="btn btn-lg google-btn social-btn" type="button"><span><i class="fab fa-google-plus-g"></i> Sign up with Google+</span> </button>
-            </div>
-                <p style="text-align:center">OR</p>
+            </div> -->
+                <!-- <p style="text-align:center">OR</p> -->
                 <input type="text" id="user-name" class="form-control" placeholder="User name" name="username" required="" autofocus="">
                 <input type="password" id="user-pass" class="form-control" placeholder="Password" name="password" required autofocus="">
                 <button class="btn btn-primary btn-block" type="submit"><i class="fas fa-user-plus"></i> Sign Up</button>
